# gestionecollaudo

./: LICENSE  README.md
.github/workflows/: release-windows-exe.yml
python-app/: .gitignore  README.md  build_exe.ps1  pyproject.toml  requirements-build.txt
python-app/gestione_collaudo/: __init__.py  cli.py  db.py  gui.py  importers.py  models.py  reports.py
